# nerd_gtk_icons

./: Cargo.toml  README.md  build.rs  data.json  export_script.py  metadata.json
examples/: adw_demo.rs
resources/: icons.gresource.xml  metadata.json
src/: lib.rs
