[package]
name = "nerd_gtk_icons"
version = "0.1.0"
edition = "2024"
build = "build.rs"

description = "Nerd Fonts SVG icons as GResource for GTK4/Adwaita Rust applications."
license = "MIT"
repository = "https://github.com/MariaGolubev/nerd_gtk_icons"
homepage = "https://github.com/MariaGolubev/nerd_gtk_icons"
documentation = "https://docs.rs/nerd_gtk_icons"
keywords = ["gtk", "icons", "nerd-fonts", "adwaita", "svg"]
categories = ["gui", "graphics", "visualization"]
readme = "README.md"
authors = ["Maria <golubevmt@gmail.com>"]

[dependencies]
gio = "0.22.6"
phf = { version = "0.13.1", features = ["macros"] }

[build-dependencies]
glib-build-tools = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_4"] }
